fixed z-index menu and finished block questions

--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,7 @@ ul {
   position: fixed;
   margin: 0 auto;
   background-color: white;
+  z-index: 9999;
 }
 
 .logo-header {
@@ -553,7 +554,7 @@ ul {
   position: relative;
 }
 
-.container-multicolor-low-width {
+.container-width {
   position: relative;
   width: 83.333%;
   max-width: 1080px;
@@ -564,8 +565,28 @@ ul {
 .vertical-align {
   position: absolute;
   top: 30%;
+
 }
 
 .align-right {
   right: 0;
+}
+
+
+/* DOMANDE */
+
+.container-domande{
+   margin:120px auto;
+}
+
+.container-domande h3{
+    margin-bottom:30px;
+}
+
+.p2{
+font-weight: bold;
+}
+
+.questions{
+    line-height: 4;
 }
